# ccgo

./: .gitignore  .pypirc.example  CCGO.toml.example  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  MANIFEST.in  PUBLISHING.md  README.md  mkdocs.yml  publish_to_pypi.py  pyproject.toml  rust-toolchain.toml  setup.py
.cargo/: config.toml
.github/workflows/: publish-docker-images.yml  publish-pypi.yml  release.yml
ccgo/: cli.py  main.py  requirements.txt
ccgo/build_scripts/: CCGO.toml.example  __init__.py  build_android.py  build_benches.py  build_conan.py  build_docs.py  build_include.py  build_ios.py  build_kmp.py  build_linux.py  build_macos.py  build_ohos.py  build_tests.py  build_tvos.py  build_utils.py  build_watchos.py  build_windows.py  check_library.sh  dependency_manager.py  publish_conan.py
ccgo/commands/: bench.py  build.py  check.py  ci.py  clean.py  doc.py  help.py  init.py  install.py  lib.py  new.py  package.py  publish.py  tag.py  test.py
ccgo/docker/: DOCKER_BUILD_GUIDE.md  PUBLISHING.md  README.md  build_docker.py  publish_images.sh  update_dockerfiles.sh
ccgo/dockers/: DOCKER_BUILD_GUIDE.md  Dockerfile.android  Dockerfile.apple  Dockerfile.linux  Dockerfile.windows-mingw  Dockerfile.windows-msvc  PUBLISHING.md  README.md  WINDOWS_TOOLCHAIN_GUIDE.md  build_docker.py  publish_images.sh  push_to_ghcr.sh  update_dockerfiles.sh
ccgo/utils/: template_version.py
cmake/: CCGODependencies.cmake  CMakeConfig.cmake  CMakeExtraFlags.cmake  FindCCGODependencies.cmake  ios.toolchain.cmake  windows-msvc.toolchain.cmake
cmake/template/: External.CMakeLists.txt.in  External.Download.txt.in  Root.CMakeLists.txt.in  ThirdParty.CMakeLists.txt.in
collections/: community.json  official.json
dockers/: Dockerfile.android  Dockerfile.apple  Dockerfile.linux  Dockerfile.ohos  Dockerfile.openwrt  Dockerfile.windows-mingw  Dockerfile.windows-msvc  README.md
docs/: README.md  README.zh.md  build-analytics.md  build-analytics.zh.md  build-caching.md  build-caching.zh.md  dependency-linkage.md  dependency-linkage.zh.md  dependency-resolution.md  dependency-resolution.zh.md  dependency-vendoring.md  dependency-vendoring.zh.md  incremental-builds.md  incremental-builds.zh.md  index.md  index.zh.md  requirements.txt  tasks-android-alignment.md  tasks-android-alignment.zh.md  version-conflict-resolution.md  version-conflict-resolution.zh.md  video-tutorial-script.md  video-tutorial-script.zh.md  workspace-dependencies.md  workspace-dependencies.zh.md
docs/development/: architecture.md  architecture.zh.md  changelog.md  changelog.zh.md  contributing.md  contributing.zh.md  error-handling-implementation.md  error-handling-implementation.zh.md  roadmap.md  roadmap.zh.md
docs/features/: build-profiles.md  build-profiles.zh.md  build-system.md  build-system.zh.md  dependency-management.md  dependency-management.zh.md  docker-builds.md  docker-builds.zh.md  git-integration.md  git-integration.zh.md  git-shorthand.md  git-shorthand.zh.md  publishing.md  publishing.zh.md  registry.md  registry.zh.md  version-management.md  version-management.zh.md
docs/getting-started/: configuration.md  configuration.zh.md  installation.md  installation.zh.md  project-structure.md  project-structure.zh.md  quickstart.md  quickstart.zh.md
docs/guides/: cmake-integration.md  cmake-integration.zh.md  gradle-plugins.md  gradle-plugins.zh.md  migrating-to-registry.md  migrating-to-registry.zh.md  migration-from-conan.md  migration-from-conan.zh.md  migration-python-to-rust.md  migration-python-to-rust.zh.md
docs/reference/: ccgo-toml.md  ccgo-toml.zh.md  cli.md  cli.zh.md  cmake.md  cmake.zh.md  config.md  config.zh.md  gradle-plugins.md  gradle-plugins.zh.md
docs/stylesheets/: extra.css
jetbrains-ccgo/: .gitignore  PUBLISHING.md  PUBLISHING.zh.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
nvim-ccgo/: LICENSE  README.md
nvim-ccgo/ftdetect/: ccgo.lua
nvim-ccgo/plugin/: ccgo.lua
nvim-ccgo/schemas/: ccgo.schema.json
scripts/: release.sh
src/: cli.rs  collection.rs  error.rs  lockfile.rs  main.rs  version.rs
src/commands/: add.rs  analytics.rs  bench.rs  build.rs  check.rs  clean.rs  collection.rs  doc.rs  doctor.rs  fetch.rs  init.rs  install.rs  mod.rs  new.rs  package.rs  publish.rs  registry.rs  release.rs  remove.rs  run.rs  search.rs  self_cmd.rs  self_update.rs  tag.rs  test.rs  tree.rs  (+4 more)
tests/: linkage_smoke.rs  registry_smoke.rs  source_only_smoke.rs
vscode-ccgo/: .gitignore  PUBLISHING.md  PUBLISHING.zh.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+145 files in other folders)
